--- a/sd_proto/pubspec.yaml
+++ b/sd_proto/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   firebase_auth: ^0.6.2+1
   google_sign_in:
+  flutter_blue: 0.4.2
   flutter_test:
     sdk: flutter
 
