--- a/sd_proto/pubspec.yaml
+++ b/sd_proto/pubspec.yaml
@@ -19,13 +19,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
   firebase_auth: ^0.6.2+1
   google_sign_in:
   flutter_blue: 0.4.2
+  provider:
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  cupertino_icons: ^0.1.2
+
   flutter_test:
     sdk: flutter
 
