--- a/sd_proto/pubspec.yaml
+++ b/sd_proto/pubspec.yaml
@@ -1,6 +1,6 @@
 name: sd_proto
 description: A prototype for senior design project.
-
+#FIrebase branch
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
 # followed by an optional build number separated by a +.
@@ -19,6 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^0.2.5
   firebase_auth: ^0.6.2+1
   google_sign_in:
   flutter_blue: 0.4.2
