--- a/sd_proto/pubspec.yaml
+++ b/sd_proto/pubspec.yaml
@@ -22,8 +22,10 @@ dependencies:
   firebase_core: ^0.2.5
   firebase_auth: ^0.6.2+1
   google_sign_in:
+  firebase_database:
   flutter_blue: 0.4.2
   provider:
+  intl:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
