--- a/sd_proto/pubspec.yaml
+++ b/sd_proto/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_blue: 0.4.2
   provider:
   intl:
+  charts_flutter:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
