--- a/sd_proto/pubspec.yaml
+++ b/sd_proto/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   provider:
   intl:
   charts_flutter:
+  flutter_local_notifications: ^0.4.4+2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
