--- a/sd_proto/pubspec.yaml
+++ b/sd_proto/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   intl:
   charts_flutter:
   flutter_local_notifications: ^0.4.4+2
+  shared_preferences: ^0.4.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
