--- a/sd_proto/pubspec.yaml
+++ b/sd_proto/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_local_notifications: ^0.4.4+2
   shared_preferences: ^0.4.2
   swipedetector:
+  flutter_cache_manager: ^0.3.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
